...
                onValueChange = {
                    location = it // update location to new value
                },
                label = {
                    Text("Race Location")
                },
                modifier = Modifier.testTag("locationInput") // for testing
            )

            Spacer(modifier = Modifier.height(8.dp))

            Button(
                onClick = {
                    if (location.isNotBlank()) {
                        races.add(location)
                        location = ""
                    }
                },
                modifier = Modifier.testTag("addRaceButton") // for testing
            ) {
                Text("Add")
            }
        }

        // list to display races
...
